# splitter

./: README.en.md  README.md  install.sh  requirements.txt  setup.cfg  setup.py
tests/python/: queue_test.py  thread_test.py  unicode_test.py
tools/: __init__.py  main.py
tools/cert/: cert.py
tools/cmd/: cut.py
tools/download/: rpm.py
tools/logger/: __init__.py  log.py
tools/parse/: parse.py
tools/slice/: extra.py  slice.py
tools/splitter/: loader.py  splitter.py
