[metadata]
name = splitter
summary = A tool for splitting software packages into smaller components.
description_file = README.md
long_description_content_type = text/markdown
author = openEUler Cloudnative SIG
home_page = https://gitee.com/openeuler/splitter
python_requires = >=3.7
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Mulan Permissive Software License v2 (MulanPSL-2.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[pbr]
warnerrors = True

[files]
packages =
    tools

[entry_points]
console_scripts =
    splitter = tools.main:main

[wheel]
universal = 1